some updates to style and content of web design & typography docs

--- a/index.html
+++ b/index.html
@@ -11,40 +11,54 @@
         <link rel="stylesheet" href="css/styles.css">
         <title>Daves Stuff</title>
     </head>
-    <body class="d-flex flex-column flex-grow">
+    <body class="d-flex flex-column flex-grow full-height">
         <div class="container">
             <header>
                 <h1 class="header">Dave's Stuff</h1>
             </header>
         </div>
-        <div class="container">
-            <div class="section">
-                <h3 class="section-header">General</h3>
-                <a href="website-design.html">Website Design</a>
-                <a href="npm.html">NPM Resources</a>
-                <a href="grunt.html">Grunt</a>
-                <a href="gulp.html">Gulp</a>
-                <a href="react.html">React</a>
-                <a href="prism.html">Prism</a>
-                <a class="inline" href="fusion360Basics.html">Fusion360</a> <a class="inline" href="fusion360Questions.html">Questions</a> <a class="inline" href="fusion360Log.html"> Log</a> <a class="inline" href="fusion360Glossary.html"> Glossary</a>
-            </div>
-            <div class="section">
-                <h3 class="section-header">Cheat Sheets</h3>
-                <a href="bootstrap-cheatsheet.html">Bootstrap Cheatsheet</a>
-                <a href="sublime-cheatsheet.html">Sublime Cheatsheet</a>
-            </div>
-            <div class="section">
-                <h3 class="section-header">Checklists</h3>
-                <a href="webpage-checklist.html">Web Page Checklist</a>
-            </div>
-            <div class="section">
-                <h3 class="section-header">Graphics</h3>
-                <a href="typography.html">Typography</a>
-            </div>
-
-            <div class="section">
-                <h3 class="section-header">...other</h3>
-                <a href="how-did-i-fix.html">How did i fix...</a>
+        <div class="container full-height">
+            <div class="row">
+                <div class="col-12 col-sm-4">
+                    <div class="section">
+                        <h3 class="section-header">General</h3>
+                        <a href="website-design.html">Website Design</a>
+                        <a href="npm.html">NPM Resources</a>
+                        <a href="grunt.html">Grunt</a>
+                        <a href="gulp.html">Gulp</a>
+                        <a href="react.html">React</a>
+                        <a href="prism.html">Prism</a>
+                    </div>
+                    <div class="section">
+                        <h3 class="section-header">Checklists</h3>
+                        <a href="webpage-checklist.html">Web Page Content</a>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-4">
+                    <div class="section">
+                        <h3 class="section-header">Design</h3>
+                        <a href="color.html">Working with Color</a>
+                        <a href="typography.html">Typography</a>
+                    </div>
+                    <div class="section">
+                        <h3 class="section-header">Cheat Sheets</h3>
+                        <a href="bootstrap-cheatsheet.html">Bootstrap</a>
+                        <a href="sublime-cheatsheet.html">Sublime</a>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-4">
+                    <div class="section">
+                        <h3 class="section-header">Fusion360</h3>
+                        <a href="fusion360Basics.html">Basics</a>
+                        <a href="fusion360Questions.html">Questions</a>
+                        <a href="fusion360Log.html"> Log</a>
+                        <a href="fusion360Glossary.html"> Glossary</a>
+                    </div>
+                    <div class="section">
+                        <h3 class="section-header">...other</h3>
+                        <a href="how-did-i-fix.html">How did i fix...</a>
+                    </div>
+                <div>
             </div>
         </div>
         <div class="container flex-fill flex-grow vertical-filler">
