--- a/typography.html
+++ b/typography.html
@@ -22,17 +22,45 @@
                     <div class="section-title">Basic Rules</div>
                 </div>
             </div>
-            <div class="section-title-2 row col-12">Use one Font</div>It keeps life simpler - Two types needs skill
-            <div class="section-title-2 row col-12">Choose a readable size</div>Choose the most readable font size for the main body of the text (normally around 16 or 18).
-            <div class="section-title-2 row col-12">Use a type scale </div>From that base size, create a font scale (see&nbsp;<a href="https://www.gridlover.net/try"> grid lover</a> and <a href="https://type-scale.com/"> type-scale.com</a>)
-            <div class="section-title-2 row col-12">Skip font sizes for emphasis</div>You don't have to use every font size on the scale - skipping a size for emphasis is fine
-            <div class="section-title-2 row col-12">Left Justify</div>Don't justify on both sides, you'll just end up with random gaps in the text.
-            <div class="section-title-2 row col-12">Stay away from dark corners and dangerous edges</div>
+            <div class="section-title-2 row col-12">R: Use one font....two at a push</div>
+            It keeps life simpler - Two types needs skill <br>If you really feel you need two, try using two fonts designed to be used together e.g. Circe and Circe Rounded <br>
+            <a href="https://fonts.google.com/">Google Fonts</a>, or <a href="http://www.fontsinuse.com">fonts in use</a> are also good places to find fonts that go well together
+            <div class="section-title-2 row col-12">R: Choose a readable size</div>C
+            hoose the most readable font size for the main body of the text <br> Normally this is around 16 or 18
+            <div class="section-title-2 row col-12">R: Use a type scale </div>
+            From that base size, create a font scale (see&nbsp;<a href="https://www.gridlover.net/try"> grid lover</a> and <a href="https://type-scale.com/"> type-scale.com</a>)
+            <img src="./images/typescale.png" alt="Example of a Typscale produced on type-scale.com">
+            <div class="section-title-2 row col-12">R: Skip font sizes for emphasis</div>
+            You don't have to use every font size on the scale - skipping a size for emphasis is fine
+            <div class="section-title-2 row col-12">R: Left justify</div>
+            Don't justify on both sides, you'll just end up with random gaps in the text.
+            <div class="section-title-2 row col-12">R: Stay away from dark corners and dangerous edges</div>
             Don't have text jammed right into the edges. It's weird.
-            <div class="section-title-2 row col-12">Alignment </div> Left vertically, and normally baseline horizontally
-            <div class="section-title-2 row col-12">Vertical gaps between elements</div>Should be based on line height
-            <div class="section-title-2 row col-12">Measure</div>Also known as line length. 65 characters is ideal. 40-80 is sensible min/max
-            <div class="section-title-2 row col-12">Group using lines</div>A line above a section gives it definition as a "chunk" (see&nbsp;<a href="https://fonts.google.com/"> google fonts</a>)
+            <div class="section-title-2 row col-12">R: Alignment </div>
+            Left vertically, and normally baseline horizontally
+            <img src="./images/Anatomy-of-typography.png" alt="Diagram illustrating typographic terms">
+            <div class="section-title-2 row col-12">R: Vertical gaps between elements</div>
+            Should be based on line height
+            <div class="section-title-2 row col-12">R: Measure</div>
+            A.k.a line length, a.k.a number of characters that fit on a line. <br> 65 characters is ideal. 40-80 is sensible min/max
+            <div class="section-title-2 row col-12">R: Group using lines</div>
+            A line above a section gives it definition as a "chunk" (see&nbsp;<a href="https://fonts.google.com/"> google fonts</a>)
+            <div class="section-title-2 row col-12">R: Line height</div>
+            Typically, you may need to increase line height with small font sizes in order to make text more readable, and potentially decrease it with large font sizes. It is especially likely to need to be decreased if the text is all caps, and there are no descenders
+            <div class="section-title-2 row col-12">R: Letter spacing</div>
+            USING UPPERCASE? Often, a bit of extra letter spacing can help readability when <span style="letter-spacing: 0.03em">USING UPPERCASE</span>
+            <div class="section-title-2 row col-12">R: Closeness and space</div>
+                You need related elements close, and space between unrelated elements. <a href="https://www.youtube.com/watch?v=6ardZEhjvV0">This video</a> gives a great introduction to using spaces and fonts when organizing elements of text
+            <div class="row">
+                <div class="col-6">
+                    <div class="section-title-2">R: How to distinguish text elements</div>
+                    Then you need to indicte the hierarhy of importance of the elements <br>
+                    Ways of using typography to indicate the hierarchy include font size, weight, darkness and color
+                </div>
+                <div class="col-6">
+                    <div style="font-weight: 300;font-size:6em;line-height:1em;color:#555555">Change Size</div> <div style="font-size:2em;line-height:1.5em;font-weight: 900">Use a different Weight of Font</div> <div style="font-size:2em;line-height:1.5em;color:black">Dark &amp; important <span style="color:lightgrey">, Lighter = less, </span> <span style="color:#007bff;font-weight: 800"> or some Color</span></div>
+                </div>
+            </div>
         </div>
     </body>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
