--- a/website-design.html
+++ b/website-design.html
@@ -34,6 +34,12 @@
             </li>
         </ul>
         <div class="row">
+            <div class="col-12 ">
+                <div class="section-title">Obvious Actions</div>
+            </div>
+        </div>
+        If there's one obvious action on a page e.g. Save, Create New Pots etc. it's good to have it obvious and to tone down potentially distracting similarly styled actions. <a href="https://youtu.be/S6-q5BheEYU?t=488">This part of this video </a>has a good explanation
+        <div class="row">
             <div class="col-12">
                 <div class="section-title">Navigation</div>
             </div>
