--- a/bootstrap.html
+++ b/bootstrap.html
@@ -11,48 +11,21 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-social/5.1.1/bootstrap-social.min.css">
     <link rel="stylesheet" href="css/styles.css">
-    <title>Basic Webpage Design</title>
+    <title>Bootstrap</title>
 </head>
 
 <body>
     <div class="container mt-4">
         <div class="row">
-            <div class="page-title col-12">Basic Webpage Design</div>
+            <div class="page-title col-12">Bootstrap</div>
         </div>
-        <div class="row">
-            <div class="col-12 ">
-                <div class="section-title">Information Architecture</div>
-            </div>
-        </div>
-        <ul>
-            <li>Pages need to be in some sort of a logical hierarchy</li>
-        </ul>
-        Resources
-        <ul>
-            <li>
-                <a href="https://www.webfx.com/blog/web-design/information-architecture-101-techniques-and-best-practices/">Information Architecture</a>
-            </li>
-        </ul>
-        <div class="row">
-            <div class="col-12 ">
-                <div class="section-title">Obvious Actions</div>
-            </div>
-        </div>
-        If there's one obvious action on a page e.g. Save, Create New Pots etc. it's good to have it obvious and to tone down potentially distracting similarly styled actions. <a href="https://youtu.be/S6-q5BheEYU?t=488">This part of this video </a>has a good explanation
+       
         <div class="row">
             <div class="col-12">
                 <div class="section-title">Navigation</div>
             </div>
         </div>
-        <ul>
-            <li>Same across pages</li>
-            <li>Click on logo goes home</li>
-            <li>There is an indication of current location on the nav bar e.g. underline, color</li>
-            <li>Not too many items</li>
-            <li>If hierachy complexity needs it, Breadcrumbs (normally below main navigation) are useful</li>
-            <li>If part of a multi step process like airline booking, a wizard guide showing steps and indicating current step </li>
-            <li>It's fine to remove the ugly default focus outline that appears as you tab through a web page, but you should replace it with something you like. See <a href="https://youtu.be/iHEkRIF7zxI?t=771">this video</a> for examples</li>
-        </ul>
+        
         Resources
         <ul>
             <li>
@@ -165,18 +138,6 @@
                 </div>
             </div>
         </ul>
-        Resources
-        <ul>
-            <li>
-                <a href="http://getbootstrap.com/docs/4.0/components/badge/" target="_blank" rel="noopener nofollow">Bootstrap Badge</a>
-            </li>
-            <li>
-                <a href="http://getbootstrap.com/docs/4.0/components/alerts/" target="_blank" rel="noopener nofollow">Bootstrap Alerts</a>
-            </li>
-            <li>
-                <a href="http://getbootstrap.com/docs/4.0/components/progress/" target="_blank" rel="noopener nofollow">Bootstrap Progress</a>
-            </li>
-        </ul>
         <div class="row">
             <div class="col-12">
                 <div class="section-title">Bootstrap JS</div>
@@ -191,7 +152,6 @@
                 <a href="http://getbootstrap.com/docs/4.0/getting-started/javascript/" target="_blank" rel="noopener nofollow">Bootstrap and JavaScript</a>
             </li>
         </ul>
-        <a href="http://getbootstrap.com/docs/4.0/getting-started/javascript/" target="_blank" rel="noopener nofollow">Bootstrap and JavaScript</a>
     </div>
 </body>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
