--- a/index.html
+++ b/index.html
@@ -22,23 +22,12 @@
                 <div class="col-12 col-sm-4">
                     <div class="section">
                         <h3 class="section-header">General</h3>
-                        <a href="website-design.html">Website Design</a>
+                        <a href="bootstrap.html">Bootstrap</a>
                         <a href="npm.html">NPM Resources</a>
                         <a href="grunt.html">Grunt</a>
                         <a href="gulp.html">Gulp</a>
                         <a href="react.html">React</a>
                         <a href="prism.html">Prism</a>
-                    </div>
-                    <div class="section">
-                        <h3 class="section-header">Checklists</h3>
-                        <a href="webpage-checklist.html">Web Page Content</a>
-                    </div>
-                </div>
-                <div class="col-12 col-sm-4">
-                    <div class="section">
-                        <h3 class="section-header">Design</h3>
-                        <a href="color.html">Working with Color</a>
-                        <a href="typography.html">Typography</a>
                     </div>
                     <div class="section">
                         <h3 class="section-header">Cheat Sheets</h3>
@@ -48,11 +37,32 @@
                 </div>
                 <div class="col-12 col-sm-4">
                     <div class="section">
+                        <h3 class="section-header">Website Design</h3>
+                        <a href="design/informationArchitecture.html">Information Architecture</a>
+                        <a href="design/basics.html">Design Basics</a>
+                        <a href="design/color.html">Working with Color</a>
+                        <a href="design/typography.html">Typography</a>
+                        <a href="design/webpage-checklist.html">Web Page Checklist</a>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-4">
+                    <div class="section">
+                        <h3 class="section-header">Wood</h3>
+                        <a href="wood/potentialEcoFriendlyWoodFinishes.html"> Potential Eco Friendly Wood Finishes</a>
+                    </div>
+                    <div class="section">
+                        <h3 class="section-header">...other</h3>
+                        <a href="how-did-i-fix.html">How did i fix...</a>
+                    </div>
+                <div>
+                </div>
+                <div class="col-12 col-sm-4">
+                    <div class="section">
                         <h3 class="section-header">Fusion360</h3>
-                        <a href="fusion360Basics.html">Basics</a>
-                        <a href="fusion360Questions.html">Questions</a>
-                        <a href="fusion360Log.html"> Log</a>
-                        <a href="fusion360Glossary.html"> Glossary</a>
+                        <a href="fusion360/fusion360Basics.html">Basics</a>
+                        <a href="fusion360/fusion360Questions.html">Questions</a>
+                        <a href="fusion360/fusion360Log.html"> Log</a>
+                        <a href="fusion360/fusion360Glossary.html"> Glossary</a>
                     </div>
                     <div class="section">
                         <h3 class="section-header">...other</h3>
