pushing latest changes

--- a/index.html
+++ b/index.html
@@ -49,10 +49,12 @@
                     <div class="section">
                         <h3 class="section-header">Wood</h3>
                         <a href="wood/potentialEcoFriendlyWoodFinishes.html"> Potential Eco Friendly Wood Finishes</a>
+                        <a href="wood/CookingForGroups.html">Cooking For Groups</a>
                     </div>
                     <div class="section">
                         <h3 class="section-header">...other</h3>
                         <a href="how-did-i-fix.html">How did i fix...</a>
+                        <a href="furniturebrands.html">Furniture Brands</a>
                     </div>
                 <div>
                 </div>
