--- a/fusion360/fusion360Log.html
+++ b/fusion360/fusion360Log.html
@@ -87,6 +87,38 @@
                             <td>7</td>
                             <td>pretty good</td>
                         </tr>
+                        <tr>
+                            <td>Innofil 360 PLA</td>
+                            <td>Standard</td>
+                            <td>medium</td>
+                            <td>Yes</td>
+                            <td>60</td>
+                            <td>222</td>
+                            <td>0.2</td>
+                            <td>7</td>
+                            <td>pretty good.  
+<pre>
+[general]
+version = 4
+name = Normal Quality White PLA w Layer 1 Tips
+definition = creality_base
+
+[metadata]
+type = quality_changes
+quality_type = standard
+intent_category = default
+position = 0
+setting_version = 19
+
+[values]
+connect_skin_polygons = True
+initial_layer_line_width_factor = 120.0
+outer_inset_first = True
+speed_travel_layer_0 = 35
+top_bottom_pattern_0 = concentric
+</pre>
+</td>
+                        </tr>
                     </tbody>
                 </table>
             </div>
