--- a/electronics/basics.html
+++ b/electronics/basics.html
@@ -9,28 +9,36 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css" type="text/css">
-    <title>Fusion360</title>
+    <title>Electonics</title>
 </head>
 
 <body>
     <div class="container mt-4">
         <div class="row">
-            <div class="page-title col-12">Fusion360 Basics</div>
+            <div class="page-title col-12">Electonics</div>
         </div>
         <div class="row">
             <div class="col-12 row-content">
-                <div class="h4">Doing a sketch - the basic steps</div>
+                <div class="h4">Relays, Solenoids & Contactors</div>
+                <strong>When would you use a contactor rather than a relay?</strong> If you're using something that needs a lot of power e.g. above 240V 5A you'd normally use a contactor. Probably should learn more before deciding that though <br>
+
+                <strong>Choosing a relay</strong>. 
+
+                <strong>Recommended Relays</strong> 4RD 931 410-05 or similar (available on aliexpress). Recommended by <a href="https://www.youtube.com/watch?v=B33nj3m3nyI">
+devin vanderhoof</a> for car stuff. Reason for recommendation - skirted, watertight, nice terminator setup 
+
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 row-content">
+                <div class="h4">Relays</div>
                 <ul>
-                    <li>Start from the origin</li>
-                    <li>Draw roughly first, ignoring accuracy</li>
-                    <li>Make sure arcs have tangent constraints</li>
-                    <li>Add all constraints</li>
-                    <li>Apply dimensions until sketch is fully constrained (all lines are black)</li>
-                </ul>
-                <div class="h4">Useful Resources</div>
-                <ul>
-                    <li><a href="https://www.accu.co.uk/p/117-iso-metric-thread-dimensions">Dimensions for metric threads</a></li>
-                </ul>
+                        <li>Eletromechanical Relays - use an electromagnetic coil to attract a movable contact. Often have multiple sets of contacts, so one input change can utrn on/off multiple decvices</li>
+                        <li>Solid State Relays - Can activate with very little power. Mo movable parts = longer life than electromechanical. Switch faster</li>
+                        <li>Induction Relays - </li>
+                        <li></li>
+                        <li></li>
+                    </ul>    
             </div>
         </div>
     </div>
