--- a/fusion360/fusion360Questions.html
+++ b/fusion360/fusion360Questions.html
@@ -19,11 +19,6 @@
         </div>
 
         <div class="row">
-            <div class="col-12 ">
-                <div class="section-title">Questions answered</div>
-            </div>
-        </div>
-        <div class="row">
             <div class="col-12 row-content">
                 <div class="problem-description"><pre>Whats the use case for components vs assemblies vs projects</pre></div>
                 <div class="solution">
@@ -63,7 +58,7 @@
                 <div class="problem-description"><pre>What is the difference in remove and delete?</pre></div>
                 <div class="solution">Delete removes them throughout the whole timeline and is likely to break the history, Remove removes from the current point in history</div>
                 <div class="problem-description"><pre>What is a spline?</pre></div>
-                <div class="solution">A splice is a curve in 3D space, defined by at least 2 poonts e.g. A bezier curve</div>
+                <div class="solution">A spline is a curve in 3D space, defined by at least 2 poonts e.g. A bezier curve</div>
                 <div class="problem-description"><pre>What is a b-spline?</pre></div>
                 <div class="solution">A smooth curve created by passing through a number of control points</div>
                 <div class="problem-description"><pre>What are nurbs splines?</pre></div>
@@ -80,9 +75,7 @@
                 <div class="solution">dunno</div>
                 <div class="problem-description"><pre>Where are Fusion 360 files stored?</pre></div>
                 <div class="solution">In their cloud</div>
-                <div class="problem-description"><pre>Where is a rigid group?</pre></div>
-                <div class="solution">A group of multiple components which cannot be moved independently, but can be moved as a group</div>
-                <div class="problem-description"><pre>Whhat is a skeletal workflow?</pre></div>
+                <div class="problem-description"><pre>What is a skeletal workflow?</pre></div>
                 <div class="solution">Using user parameters (normally predefined), and using those parameters to create the design. Then, if you change those parameters later, the whole design will modify based on that</div>
                 <div class="problem-description"><pre>How do i backup in fusion 360?</pre></div>
                 <div class="solution">dunno</div>
