--- a/mechanics/salvage.html
+++ b/mechanics/salvage.html
@@ -9,29 +9,46 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css" type="text/css">
-    <title>Fusion360</title>
+    <title>Salvaging components</title>
 </head>
 
 <body>
     <div class="container mt-4">
         <div class="row">
-            <div class="page-title col-12">Fusion360 Basics</div>
+            <div class="page-title col-12">Salvaging components</div>
         </div>
         <div class="row">
             <div class="col-12 row-content">
-                <div class="h4">Doing a sketch - the basic steps</div>
+                <div class="h4">Steppers</div>
+                Old printers tend to contain a lot of these. Older printers that are no longer supported, and were designed for high volume of printing are the most likely to contain high quality steppers. Examples include
                 <ul>
-                    <li>Start from the origin</li>
-                    <li>Draw roughly first, ignoring accuracy</li>
-                    <li>Make sure arcs have tangent constraints</li>
-                    <li>Add all constraints</li>
-                    <li>Apply dimensions until sketch is fully constrained (all lines are black)</li>
-                </ul>
-                <div class="h4">Useful Resources</div>
-                <ul>
-                    <li><a href="https://www.accu.co.uk/p/117-iso-metric-thread-dimensions">Dimensions for metric threads</a></li>
+                    <li>HP Laserjet II</li>
+                    <li>HP Laserjet III</li>
+                    <li>HP Laserjet 4</li>
+                    <li>Konica Minolta</li>
+                    <li>Brother HL-10</li>
+                    <li>Brother HL-8</li>
+                    <li>Canon FAX L3100</li>
+                    <li>Canon FAX L4600</li>
+                    <li>Canon FAX L4600e</li>
+                    <li>Canon FAX L920</li>
+                    <li>Canon LBP-200v</li>
+                    <li>Canon LBP-8</li>
+                    <li>Canon LBP-RX</li>
+                    <li>Canon LBP-SX</li>
+                    <li>Canon LBP-TX</li>
                 </ul>
             </div>
+            <div class="col-12 row-content">
+                <div class="h4">DC Motors</div>
+                Larger industrial size DC motors (usually brushed DC motors) can be found in:
+                    <li>tumble dryers </li>
+                    <li>treadmill</li>
+                    <li>car starters</li>
+                </ul>
+            </div>
+
+
         </div>
     </div>
 </body>
