--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
                         <a href="3DPrinting/basics.html">Basics</a>
                     </div>
                     <div class="section">
+                        <h3 class="section-header">Raspberry Pi</h3>
+                        <a href="raspberrypi/basics.html">Basics</a>
+                    </div>
+                    <div class="section">
                         <h3 class="section-header">Fusion360</h3>
                         <a href="fusion360/fusion360Basics.html">Basics</a>
                         <a href="fusion360/fusion360KeyboardShortcut.html">Keyboard Shortcuts</a>
@@ -58,6 +62,12 @@
                     </div>
                 </div>
                 <div class="col-12 col-sm-4">
+                    <div class="section">
+                        <h3 class="section-header">Practical Stuff</h3>
+                        <a href="mechanics/index.html">Mechanics</a>
+                        <a href="electronics/basics.html">Electronics</a>
+                        <a href="mechanics/motors.html">Motors</a>
+                    </div>
                     <div class="section">
                         <h3 class="section-header">Wood</h3>
                         <a href="wood/potentialEcoFriendlyWoodFinishes.html"> Potential Eco Friendly Wood Finishes</a>
