--- a/mechanics/bearings.html
+++ b/mechanics/bearings.html
@@ -9,27 +9,41 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css" type="text/css">
-    <title>Fusion360</title>
+    <title>Bearings</title>
 </head>
 
 <body>
     <div class="container mt-4">
         <div class="row">
-            <div class="page-title col-12">Fusion360 Basics</div>
+            <div class="page-title col-12">Bearings</div>
+        </div>
+        <div class="row">
+
+            <div class="col-12 row-content">
+                Quite a lot of information is available <a href="https://www.learnengineering.net/what-is-bearing-types-of-bearings-and-classification/">here</a>
+            </div>
+            <div class="col-12 row-content">
+                <div class="h4">Types</div>
+            </div>
+            <div class="col-12 col-sm-6">
+                <figure>
+                    <img src="bearings-types.jpg" alt="Types of bearings" class="full-width-image">
+                </figure>
+            </div>
+            <div class="col-12 col-sm-6">
+                <figure>
+                    <img src="bearings-comparison-chart.jpg" alt="Bearing Comparison Chart" class="full-width-image">
+                </figure>
+            </div>
         </div>
         <div class="row">
             <div class="col-12 row-content">
-                <div class="h4">Doing a sketch - the basic steps</div>
+                <div class="h4">Pressfitting Bearings</div> 
+                If using heat to facilitate fitting, bear (haha) the following in mind
                 <ul>
-                    <li>Start from the origin</li>
-                    <li>Draw roughly first, ignoring accuracy</li>
-                    <li>Make sure arcs have tangent constraints</li>
-                    <li>Add all constraints</li>
-                    <li>Apply dimensions until sketch is fully constrained (all lines are black)</li>
-                </ul>
-                <div class="h4">Useful Resources</div>
-                <ul>
-                    <li><a href="https://www.accu.co.uk/p/117-iso-metric-thread-dimensions">Dimensions for metric threads</a></li>
+                    <li>A heat difference of 80C should be enough to mount a bearing on a shaft</li>
+                    <li>Cooling is better than heating in general, so chill one part in the freezer, and heat the other slightly</li>
+                    <li>Never heat a bearing above 125C </li>
                 </ul>
             </div>
         </div>
