--- a/mechanics/index.html
+++ b/mechanics/index.html
@@ -9,27 +9,21 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css" type="text/css">
-    <title>Fusion360</title>
+    <title>Mechanics</title>
 </head>
 
 <body>
     <div class="container mt-4">
         <div class="row">
-            <div class="page-title col-12">Fusion360 Basics</div>
+            <div class="page-title col-12">Mechanics</div>
         </div>
         <div class="row">
             <div class="col-12 row-content">
-                <div class="h4">Doing a sketch - the basic steps</div>
+                <div class="h4">Topics</div>
                 <ul>
-                    <li>Start from the origin</li>
-                    <li>Draw roughly first, ignoring accuracy</li>
-                    <li>Make sure arcs have tangent constraints</li>
-                    <li>Add all constraints</li>
-                    <li>Apply dimensions until sketch is fully constrained (all lines are black)</li>
-                </ul>
-                <div class="h4">Useful Resources</div>
-                <ul>
-                    <li><a href="https://www.accu.co.uk/p/117-iso-metric-thread-dimensions">Dimensions for metric threads</a></li>
+                    <li><a href="motors.html">Motors</a></li>
+                    <li><a href="bearings.html">Bearings</a></li>
+                    <li><a href="salvage.html">Salvaging</a></li>
                 </ul>
             </div>
         </div>
